# cdash-mcp

./: .dockerignore  .flake8  Dockerfile  LICENSE  README.md  USAGE_EXAMPLES.md  cdash_query.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: cdash-mcp-compose.yml  cdash-mcp-server.service  deploy.yml
src/cdash_mcp_server/: __init__.py  cache.py  cdash_client.py  query_utils.py  server.py  simple_client.py
tests/: __init__.py  conftest.py  test_cache.py  test_cdash_client.py  test_server_functions.py
